language/move-lang/tests/move_check/liveness/dead_refs_loop_invalid.exp
error: 

   ┌── tests/move_check/liveness/dead_refs_loop_invalid.move:4:21 ───
   │
 4 │         let x_ref = &mut x;
   │                     ------ It is still being mutably borrowed by this reference
 5 │         while (cond) {
 6 │             _ = x;
   │                 ^ Invalid copy of local 'x'
   │

error: 

    ┌── tests/move_check/liveness/dead_refs_loop_invalid.move:13:21 ───
    │
 13 │         let x_ref = &mut x;
    │                     ------ It is still being mutably borrowed by this reference
    ·
 16 │            _ = x;
    │                ^ Invalid copy of local 'x'
    │

error: 

    ┌── tests/move_check/liveness/dead_refs_loop_invalid.move:22:21 ───
    │
 22 │         let x_ref = &mut x;
    │                     ------ It is still being mutably borrowed by this reference
    ·
 25 │             _ = x;
    │                 ^ Invalid copy of local 'x'
    │

